--- a/news.html
+++ b/news.html
@@ -260,13 +260,13 @@
                 <h3>Looking Back at 10 Years of Falcon 9 Launches</h3>
                 <p>SpaceX's Falcon 9 rocket has certainly earned its place in history. Falcon 9 is the first orbital class rocket to be reused and the first commercial rocket to ferry human passengers to the ISS.</p>
             </div>
-            <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
+            <!-- <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
                 <div class="foto">
                     <a data-fancybox="produktet" href=""><img src="gallery/dragonnews.jpg"></a>
                     <h3>What is the SpaceX Crew Dragon?</h3>
                     <p>Elon Musk's SpaceX has built the Crew Dragon primarily to carry astronauts to the International Space Station.</p>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
     <div class="footer">
