--- a/aboutUs.html
+++ b/aboutUs.html
@@ -23,6 +23,7 @@
 </head>
 
 <body>
+
     <div class="loader">
         <img src="./gallery/Loading.gif" alt="Loader">
     </div>
@@ -120,7 +121,7 @@
                                         </div>
                                         <div class="col-9 col-md-8 mb48 team-member-info">
                                             <h4 class="mt0"><b>Zeynep Lika</b> • CEO </h4>
-                                            <p class="small">Chief Excecutive Officer, Zeynep is the driving force behind Formula 1. He loves to keep his hands full by participating in the development of the software, marketing, and the Customer Experience strategies.</p>
+                                            <p class="small">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit laudantium ipsa accusantium! Vitae maxime magnam accusamus eum, libero aliquid quae architecto, optio id dolorem nulla facilis sint nemo excepturi earum!</p>
                                         </div>
                                     </div>
                                 </div>
@@ -131,7 +132,7 @@
                                         </div>
                                         <div class="col-9 col-md-8 mb48 team-member-info">
                                             <h4 class="mt0"><b>Blerta Kryeziu</b> • CEO</h4>
-                                            <p class="small">Blerta is one of the lucky people in life who can say he loves what he does. He oversees 200+ in-house developers and looks after the community of 2,000 developers.</p>
+                                            <p class="small">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam molestias consectetur id! Aut velit quas nobis ex corporis assumenda minima non ipsum quibusdam accusantium laborum obcaecati provident, odio aliquam voluptates!</p>
                                         </div>
                                     </div>
                                 </div>
@@ -149,14 +150,14 @@
                                     <span class="title">
                 <span class="fw_extralight number">9,500</span>
                                     </span>
-                                    <span class="desc">employees</span>
+                                    <span class="desc">Employees</span>
                                 </div>
                                 <div class="col-12 col-sm-4 s_o_number">
                                     <span class="title ">
                 <span class="fw_extralight number">100</span>
                                     <span class="sidetext fw_light"></span>
                                     </span>
-                                    <span class="desc">partners</span>
+                                    <span class="desc">Partners</span>
                                 </div>
                                 <div class="col-12 col-sm-4 s_o_number">
                                     <span class="title">
@@ -224,6 +225,7 @@
             </main>
             </div>
 
+
             <div class="footer">
                 <div class="foto-footer">
                     <br>
@@ -248,7 +250,7 @@
                                 <a href="rockets.html">
                                     <li>Rockets</li>
                                 </a>
-                            </ul> 
+                            </ul>
                             <br>
                         </div>
                     </div>
@@ -264,20 +266,20 @@
                     <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 ">
                         <div class="list-unstyled ">
                             <i class="fas fa-envelope "><span class="h2 ">Email</span></i>
-                            <a href="mailto:bk52307@ubt-uni.net">info@spacex.com</a>
+                            <a href="mailto:eriandauti00@gmail.com">info@spacex.com</a>
                             <br>
                             <br>
                             <i class="fas fa-phone "><span class="h2 ">Phone</span></i>
-                            <p>+38 2021 202 445 54</p>
+                            <p>+38 201 202 445 54</p>
                             <br>
                         </div>
                     </div>
                 </div>
                 <div class="footer-copyright copyright text-center py-3 ">© 2021 Copyright:
                     <a href="https://www.spacex.com/"> SpaceX.com</a>
-
                 </div>
             </div>
+        </div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js "></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js "></script>
@@ -288,14 +290,13 @@
                 $(this).find('.sm-menu').first().stop(true, true).slideDown(150);
             }, function() {
                 $(this).find('.sm-menu').first().stop(true, true).delay(120).slideUp(100);
-            
             });
         }
     });
 
     var tickerLength = $('.carousel-inner-data ul li').length;
     var tickerHeight = $('.carousel-inner-data ul li').outerHeight();
-    $('.carousel-inner-data ul li:list-child').prependTo('.carousel-inner-data ul');
+    $('.carousel-inner-data ul li:last-child').prependTo('.carousel-inner-data ul');
     $('.carousel-inner-data ul').css('marginTop', -tickerHeight);
 
     function moveTop() {
@@ -305,6 +306,7 @@
             $('.carousel-inner-data ul li:first-child').appendTo('.carousel-inner-data ul');
             $('.carousel-inner-data ul').css('top', '');
         });
+
     }
 
     setInterval(function() {
@@ -317,12 +319,10 @@
     function vanish() {
         loader.classList.add("dissapear");
     }
-    </script>
-    <script class="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 
-    <!-- <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<!-- <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
 
 </html>
-
-
