--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
             <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 ">
                 <div class="list-unstyled ">
                     <i class="fas fa-envelope "><span class="h2 ">Email</span></i>
-                    <a href="mailto:eriandauti00@gmail.com">info@spacex.com</a>
+                    <a href="mailto:bk52307@ubt-uni.net">info@spacex.com</a>
                     <br>
                     <br>
                     <i class="fas fa-phone "><span class="h2 ">Phone</span></i>
