--- a/aboutUs.html
+++ b/aboutUs.html
@@ -128,7 +128,7 @@
                                 <div class="col">
                                     <div class="row">
                                         <div class="col-3 mb48 team-member">
-                                            <img src="" class="img-responsive img-circle shadow" loading="lazy" />
+                                            <img src="./gallery/blerta.jpg" class="img-responsive img-circle shadow" loading="lazy" />
                                         </div>
                                         <div class="col-9 col-md-8 mb48 team-member-info">
                                             <h4 class="mt0"><b>Blerta Kryeziu</b> • CEO</h4>
